test/fail_compilation/diag13609b.d
/*
TEST_OUTPUT:
---
fail_compilation/diag13609b.d(9): Error: { } expected following struct declaration
fail_compilation/diag13609b.d(9): Error: Declaration expected, not ':'
---
*/

struct S :
